# pyromancy

./: .coverage  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt
docs/: conf.py  index.md  requirements.txt
docs/_static/notebooks/: mnist-classifier-pcn.ipynb
docs/api-reference/: index.md  model.md  nodes.md  pyromancy.md
docs/foundations/: index.md  overview.md
docs/reference/: nodes.md  pyromancy.md
docs/tutorials/: index.md  mnist-classifier-pcn.md
docs/user-manual/: expectation-maximization.md  index.md  predictive-coding.md
eg/: mnist-classifier-mlp.ipynb  pcn-mnist-classifier.ipynb
misc/design/: Pyromancy Header.ai  Pyromancy Logo.ai
pyromancy/: __init__.py  _internal.py  infra.py  utils.py
pyromancy/model/: __init__.py  graph.py  graph_exec.py  graphexec.py
pyromancy/nodes/: __init__.py  base.py  gaussian.py  special.py  variant.py
test/: common.py  test_em_utils.py  test_infra.py  test_utils_em.py
test/test_model/: test_graph.py
test/test_nodes/: test_gaussian.py  test_special.py
